@@ -2,14 +2,14 @@ rem 使用者应根据自身平台编码自行转换 防止乱码 例如 win使�
 @echo off
 title=Vitality-Admin
 
-echo  启动倒计时：
+echo  启动倒计时（单位：秒）：
 timeout /T 10 /NOBREAK
 
 rem jar平级目录
 set AppName=vitality-admin.jar
 
 rem JVM参数
-set JVM_OPTS="-Dname=%AppName% -Duser.timezone=Asia/Shanghai -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseZGC"
+set JVM_OPTS="-Dname=%AppName% -Dserver.port=8080 -Dspring.profiles.active=h2 -Duser.timezone=Asia/Shanghai -Xms128m -Xmx512m"
 
 for /f "usebackq tokens=1-2" %%a in (`jps -l ^| findstr %AppName%`) do (
 	set pid=%%a
